use record for system config data stucture